updated HTML structure and content

--- a/index.html
+++ b/index.html
@@ -11,18 +11,52 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="images/satellite.png" alt="cloud-image">
     <h1>I am Robert.</h1>
     <p>a front-end developer</p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+    <img class="bottom-cloud" src="images/moon-phase.png" alt="cloud-image">
     <img class="mountain-image" src="images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
-
+    <div class="profile">
+      <img src="images/astronaut.png" alt="">
+      <h2>About</h2>
+      <p>HI.</p>
+      <p>MY NAME IS ROBERT PARKALA AND I'M AN ASPIRING SOFTWARE DEVELOPER.</p>
+      <p>JUST ASK MY CAT.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>What I can do</h2>
+      <div class="skill-row">
+        <img class="" src="images/html-5.png" alt="">
+        <h3>HTML5</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="" src="images/css.png" alt="">
+        <h3>CSS</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <img class="" src="images/mobile-phone.png" alt="">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:robert.parkala@gmail.com">CONTACT ME</a>
+    </div>
   </div>
+
+
   <div class="bottom-container">
-
+    <a class="footer-link" href="https://www.linkedin.com/in/robertparkala">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/thelunarcoder">Twitter</a>
+    <a class="footer-link" href="https://github.com/robertparkala">GitHub</a>
+    <p>© 2020 Robert Parkala</p>
   </div>
+
 </body>
 
 </html>
