updated index.html layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/astronaut.png" alt="astronaut-image">
+      <img src="images/astronautno1.png" alt="astronaut-image">
       <h2>About</h2>
       <p>HI.</p>
       <p>MY NAME IS ROBERT PARKALA AND I'M AN ASPIRING SOFTWARE DEVELOPER.</p>
