--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/satellite.png" alt="satellite-image">
+    <img class="top-satellite" src="images/satellite.png" alt="satellite-image">
     <h1>I am Robert.</h1>
-    <p>a front-end developer</p>
-    <img class="bottom-cloud" src="images/moon-phase.png" alt="moon-image">
+    <h2>a front-end developer</h2>
+    <img class="bottom-moon" src="images/moon-phase.png" alt="moon-image">
     <img class="mountain-image" src="images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
@@ -24,6 +24,7 @@
       <p>HI.</p>
       <p>MY NAME IS ROBERT PARKALA AND I'M AN ASPIRING SOFTWARE DEVELOPER.</p>
       <p>JUST ASK MY CAT.</p>
+      <p>MY GOAL IS TO BECOME A JAVASCRIPT (REACT) DEVELOPER IN 15 MONTHS AND MY FURTHER INTERESTS LIE IN PSYCHOMETRICS AND ARTIFICIAL INTELLIGENCE.</p>
     </div>
     <hr>
     <div class="skills">
@@ -31,29 +32,28 @@
       <div class="skill-row">
         <img class="" src="images/html-5.png" alt="html5-image">
         <h3>HTML5</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <p>I CAN GIVE CONTENT BEAUTIFUL STRUCTURE, TAKE INTO ACCOUNT WEB STANDARDS AND HAVE A GOOD UNDERSTANDING OF SEO PRINCIPLES.</p>
       </div>
       <div class="skill-row">
         <img class="" src="images/css.png" alt="css-image">
         <h3>CSS</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <p>I LOVE CREATING STUNNING, MINIMAL WEBSITES AND FORMS WHICH INSPIRE A SENSE OF BALANCE WITH A CONTENT ORIENTED STYLE  TO SERVE INFORMATION QUICKLY AND EASILY.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <img class="" src="images/mobile-phone.png" alt="mobile-phone-image">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <p>I AM LOOKING FORWARD TO BEING A PART OF YOUR PROJECT.</p>
       <a class="btn" href="mailto:robert.parkala@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
+    <a class="footer-link" href="https://github.com/robertparkala">GitHub</a>
     <a class="footer-link" href="https://www.linkedin.com/in/robertparkala">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/thelunarcoder">Twitter</a>
-    <a class="footer-link" href="https://github.com/robertparkala">GitHub</a>
     <p>© 2020 Robert Parkala</p>
   </div>
 
