added navbar and navbar icon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+  <div>
+    <ul class="navbar">
+      <img src="images/woodland.png" alt="woodland-image" class="woodland"/>
+      <li><a href="#about">About</a></li>
+      <li><a href="#what-I-can-do">What I can do</a></li>
+      <li><a href="#get-in-touch">Get In Touch</a></li>
+    </ul>
+  </div>
   <div class="top-container">
     <img class="top-satellite" src="images/satellite.png" alt="satellite-image">
     <h1>I am Robert.</h1>
@@ -20,7 +28,7 @@
   <div class="middle-container">
     <div class="profile">
       <img src="images/astronautno1.png" alt="astronaut-image">
-      <h2>About</h2>
+      <h2 id="about">About</h2>
       <p>HI.</p>
       <p>MY NAME IS ROBERT PARKALA AND I'M AN ASPIRING SOFTWARE DEVELOPER.</p>
       <p>JUST ASK MY CAT.</p>
@@ -28,7 +36,7 @@
     </div>
     <hr>
     <div class="skills">
-      <h2>What I can do</h2>
+      <h2 id="what-I-can-do">What I can do</h2>
       <div class="skill-row">
         <img class="" src="images/html-5.png" alt="html5-image">
         <h3>HTML5</h3>
@@ -37,13 +45,13 @@
       <div class="skill-row">
         <img class="" src="images/css.png" alt="css-image">
         <h3>CSS</h3>
-        <p>I LOVE CREATING STUNNING, MINIMAL WEBSITES AND FORMS WHICH INSPIRE A SENSE OF BALANCE WITH A CONTENT ORIENTED STYLE  TO SERVE INFORMATION QUICKLY AND EASILY.</p>
+        <p>I LOVE CREATING STUNNING, MINIMAL WEBSITES AND FORMS WHICH INSPIRE A SENSE OF BALANCE WITH A CONTENT ORIENTED STYLE TO SERVE INFORMATION QUICKLY AND EASILY.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <img class="" src="images/mobile-phone.png" alt="mobile-phone-image">
-      <h2>Get In Touch</h2>
+      <h2 id="get-in-touch">Get In Touch</h2>
       <p>I AM LOOKING FORWARD TO BEING A PART OF YOUR PROJECT.</p>
       <a class="btn" href="mailto:robert.parkala@gmail.com">CONTACT ME</a>
     </div>
