added navbar, modified middle and bottom containers

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div>
     <ul class="navbar">
-      <img src="images/woodland.png" alt="woodland-image" class="woodland"/>
+      <img class="woodland" src="images/woodland.png" alt="woodland-image"/>
       <li><a href="#about">About</a></li>
       <li><a href="#what-I-can-do">What I can do</a></li>
       <li><a href="#get-in-touch">Get In Touch</a></li>
@@ -21,39 +21,44 @@
   <div class="top-container">
     <img class="top-satellite" src="images/satellite.png" alt="satellite-image">
     <h1>I am Robert.</h1>
-    <h2>a front-end developer</h2>
+    <h2 class="front-end-font">a front-end developer.</h2>
     <img class="bottom-moon" src="images/moon-phase.png" alt="moon-image">
     <img class="mountain-image" src="images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/astronautno1.png" alt="astronaut-image">
-      <h2 id="about">About</h2>
-      <p>HI.</p>
-      <p>MY NAME IS ROBERT PARKALA AND I'M AN ASPIRING SOFTWARE DEVELOPER.</p>
-      <p>JUST ASK MY CAT.</p>
-      <p>MY GOAL IS TO BECOME A JAVASCRIPT (REACT) DEVELOPER IN 15 MONTHS AND MY FURTHER INTERESTS LIE IN PSYCHOMETRICS AND ARTIFICIAL INTELLIGENCE.</p>
+      <img class="astronautno1" src="images/astronautno1.png" alt="astronaut-image">
+      <h2 id="about">About.</h2>
+      <p class="paragraph-text1">HI.</p>
+      <p class="paragraph-text1">MY NAME IS ROBERT PARKALA AND I'M A SOFTWARE DEVELOPER.</p>
+      <p class="paragraph-text1">JUST ASK MY IMAGINARY CAT.</p>
+      <p class="paragraph-text1">I'M ALSO INTERESTED IN PSYCHOMETRICS AND ARTIFICIAL INTELLIGENCE (...meep-morp-zeep).</p>
     </div>
     <hr>
     <div class="skills">
-      <h2 id="what-I-can-do">What I can do</h2>
+      <h2 id="what-I-can-do">What I can do.</h2>
       <div class="skill-row">
-        <img class="" src="images/html-5.png" alt="html5-image">
+        <img class="html5-image" src="images/html-5.png" alt="html5-image">
         <h3>HTML5</h3>
-        <p>I CAN GIVE CONTENT BEAUTIFUL STRUCTURE, TAKE INTO ACCOUNT WEB STANDARDS AND HAVE A GOOD UNDERSTANDING OF SEO PRINCIPLES.</p>
+        <p class="paragraph-text2">I CAN GIVE CONTENT BEAUTIFUL STRUCTURE, TAKE INTO ACCOUNT WEB STANDARDS AND HAVE A GOOD UNDERSTANDING OF SEO PRINCIPLES.</p>
       </div>
       <div class="skill-row">
-        <img class="" src="images/css.png" alt="css-image">
+        <img class="css-image" src="images/css.png" alt="css-image">
         <h3>CSS</h3>
-        <p>I LOVE CREATING STUNNING, MINIMAL WEBSITES AND FORMS WHICH INSPIRE A SENSE OF BALANCE WITH A CONTENT ORIENTED STYLE TO SERVE INFORMATION QUICKLY AND EASILY.</p>
+        <p class="paragraph-text2">I LOVE CREATING STUNNING, MINIMAL WEBSITES AND FORMS WHICH INSPIRE A SENSE OF BALANCE WITH A CONTENT ORIENTED STYLE TO SERVE INFORMATION QUICKLY AND EASILY.</p>
+      </div>
+      <div class="skill-row">
+        <img class="solarsystem-image" src="images/solar-system.png" alt="solarsystem-image">
+        <h3>OUTER-SPACE EXPLORATION</h3>
+        <p class="paragraph-text2">BUT MY BEST SKILL IS ACTUALLY THINKING ABOUT OUTER-SPACE. WE JUST WITNESSED A BLACK HOLE SHRED A STAR THE SIZE OF OUR SUN JUST OVER 215 MIL LIGHTEYEARS AWAY. IT TOOK THAT LIGHT 215 MIL YEARS TO REACH EARTH FOR US TO SE IT, LET THAT SINK IN!</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <img class="" src="images/mobile-phone.png" alt="mobile-phone-image">
-      <h2 id="get-in-touch">Get In Touch</h2>
-      <p>I AM LOOKING FORWARD TO BEING A PART OF YOUR PROJECT.</p>
-      <a class="btn" href="mailto:robert.parkala@gmail.com">CONTACT ME</a>
+      <h2 id="get-in-touch">Get In Touch.</h2>
+      <p>LOVE OUTER-SPACE AS MUCH AS I DO? WE CAN CODE WHILE WE TALK ABOUT THE UNIVERSE!</p>
+      <a class="BUTTON_VEN" href="mailto:robert.parkala@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
@@ -62,7 +67,7 @@
     <a class="footer-link" href="https://github.com/robertparkala">GitHub</a>
     <a class="footer-link" href="https://www.linkedin.com/in/robertparkala">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/thelunarcoder">Twitter</a>
-    <p>© 2020 Robert Parkala</p>
+    <p class="bottom-paragraph">© 2020 Robert Parkala</p>
   </div>
 
 </body>
