fixed spelling error

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="skill-row">
         <img class="solarsystem-image" src="images/solar-system.png" alt="solarsystem-image">
         <h3>OUTER-SPACE EXPLORATION</h3>
-        <p class="paragraph-text2">BUT MY BEST SKILL IS ACTUALLY THINKING ABOUT OUTER-SPACE. WE JUST WITNESSED A BLACK HOLE SHRED A STAR THE SIZE OF OUR SUN JUST OVER 215 MIL LIGHTEYEARS AWAY. IT TOOK THAT LIGHT 215 MIL YEARS TO REACH EARTH FOR US TO SE IT, LET THAT SINK IN!</p>
+        <p class="paragraph-text2">BUT MY BEST SKILL IS ACTUALLY THINKING ABOUT OUTER-SPACE. WE JUST WITNESSED A BLACK HOLE SHRED A STAR THE SIZE OF OUR SUN JUST OVER 215 MIL LIGHTEYEARS AWAY. IT TOOK THAT LIGHT 215 MIL YEARS TO REACH EARTH FOR US TO BE ABLE TO SEE IT, LET THAT SINK IN!</p>
       </div>
     </div>
     <hr>
